# cookiecutter-django-rest

{{cookiecutter.github_repository_name}}/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
{{cookiecutter.github_repository_name}}/app/: celery.py  settings.py  urls.py  wsgi.py
{{cookiecutter.github_repository_name}}/tasker/: tasks.py
{{cookiecutter.github_repository_name}}/user/: serializers.py  urls.py  views.py
