[tool.poetry]
name = "spels-make-template"
version = "0.1.0"
description = ""
authors = ["ilyatokar <itokar98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
crontab = "^0.22.9"
django-cors-headers = "^3.6.0"
djangorestframework-simplejwt = "^4.6.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
redis = "^3.5.3"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
